--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,29 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.spinner {
+  width: 88px;
+  height: 88px;
+  border-radius: 50%;
+  background: radial-gradient(farthest-side, #5046e5 94%, #0000) top/14.1px
+      14.1px no-repeat,
+    conic-gradient(#0000 30%, #5046e5);
+  mask: radial-gradient(farthest-side, #0000 calc(100% - 14.1px), #000 0);
+  -webkit-mask: radial-gradient(
+    farthest-side,
+    #0000 calc(100% - 14.1px),
+    #000 0
+  );
+  animation: spinner-c7wet2 1s infinite linear;
+}
+
+@keyframes spinner-c7wet2 {
+  100% {
+    transform: rotate(1turn);
+  }
+}
 
 @layer base {
   :root {
